--- a/templates/Home.html
+++ b/templates/Home.html
@@ -31,7 +31,7 @@
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign In</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" > <a href="/signin"> Sign In </a></button>
           </form>
         </div>
       </nav>
