--- a/templates/signin.html
+++ b/templates/signin.html
@@ -17,14 +17,14 @@
     <link href="/static/css/signin.css" rel="stylesheet">
   </head>
 
-  <body class="text-center">
-    <form class="form-signin">
-      <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+  <body class="text-center" background="/static/images/b1.jpg">
+    <form class="form-signin" method = "POST">
+      <img class="mb-4" src="../../assets/brand/bosotstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputEmail" class="sr-only">Username</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input  name="username" class="form-control" placeholder="Username" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" name="password" class="form-control" placeholder="Password" required>
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
@@ -32,6 +32,12 @@
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+     {% block content %}
+  {% if(Message) %}
+      <div>{{ Message }}</div>
+  {% endif %}
+  {% endblock content %}
     </form>
+
   </body>
 </html>
