--- a/templates/signin.html
+++ b/templates/signin.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
     <title>Signin Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="/static/css/signin.css" rel="stylesheet">
   </head>
 
   <body class="text-center" background="/static/images/b1.jpg">
-    <form class="form-signin" method = "POST">
-      <img class="mb-4" src="../../assets/brand/bosotstrap-solid.svg" alt="" width="72" height="72">
+  
+  <form class="form-signin" method="POST">
+      
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputEmail" class="sr-only">Username</label>
       <input  name="username" class="form-control" placeholder="Username" required autofocus>
@@ -31,7 +30,9 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted"><a href="/register"> New? Sign up! </a></p>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+
      {% block content %}
   {% if(Message) %}
       <div>{{ Message }}</div>
