--- a/templates/profile.html
+++ b/templates/profile.html
@@ -60,17 +60,18 @@
           </form>
         </div>
       </nav>
+  </header>
 
     <main role="main">
 
 {#      <!-- Main jumbotron for a primary marketing message or call to action -->#}
       <div class="jumbotron" back>
         <div class="container">
-            <p> <h1 class="display-3"> Hello {{ acc.Fname }}!</h1></p>
+            <p> <h1 class="display-3"> Hello {{ acc.Fname }} !</h1></p>
 
         </div>
       </div>
-{##}
+
       <div class="container">
         <!-- Example row of columns -->
         <div class="row">
@@ -82,29 +83,17 @@
             <p>
                 This is all the description for {{  eve }}. Here we will have a lot of descriptions.
                 <br>
+
+
                 <button class="btn btn-outline-success my-2 my-sm-0"><a href="{{ url_for('customers', my_var = acc.username) }}">Customers</a></button>
             </p>
 
           </div>
 
             {% endfor %}
-{#
-{##}
-{#            <div class="col-md-4">#}
-{#            <h2>Heading</h2>#}
-{##}
-{#            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>#}
-{#          </div>#}
-{##}
-{#            <div class="col-md-4">#}
-{#            <h2>Heading</h2>#}
-{##}
-{#            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>#}
-{#          </div>#}
-{#        </div>#}
 
       </div> <!-- /container -->
-
+      </div>
     </main>
 
     <footer class="container">
