pushing for spark

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -78,10 +78,10 @@
 
            {%  for eve in event %}
           <div class="col-md-4">
-            <h2> {{ eve }}</h2>
+            <h2> {{ eve.name }}</h2>
 
             <p>
-                This is all the description for {{  eve }}. Here we will have a lot of descriptions.
+                This is all the description for {{  eve.name }}. Here we will have a lot of descriptions.
                 <br>
 
 
