Profile Page added

--- a/templates/Customers.html
+++ b/templates/Customers.html
@@ -83,7 +83,7 @@
   </tbody>
 </table>
           <button class="btn btn-primary btn-lg"  onclick="extract_emails()"> Send Emails </button>
-        <a href="{{ url_for('pricing', my_var = acc.username) }}">Pricing</a>
+{#        <a href="{{ url_for('pricing', my_var = acc.username) }}">Pricing</a>#}
         </form>
         </div>
         </div>
