--- a/templates/profile.html
+++ b/templates/profile.html
@@ -81,7 +81,10 @@
             <h2> {{ eve.name }}</h2>
 
             <p>
-                This is all the description for {{  eve.name }}. Here we will have a lot of descriptions.
+                This is all the description for {{  eve.name }}. <br>
+                Start Date: {{ eve.event_start }}<br>
+                End Date: {{ eve.event_end }}<br>
+                URL: {{ eve.url }}
                 <br>
 
 
