--- a/templates/Home.html
+++ b/templates/Home.html
@@ -63,7 +63,8 @@
       <div class="jumbotron" back>
         <div class="container">
           <h1 class="display-3">Welcome to EarlyBird!</h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+          <p>We are a unique platform that serves both event organizers and its attendees. Our features include dynamic ticket pricing of events, and efficient communications with the prospective fun-seekers to assist them in making effective decisions with their time and money.
+</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
         </div>
       </div>
@@ -73,7 +74,7 @@
         <div class="row">
           <div class="col-md-4">
             <h2>Pricing</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p>We have a time-based comprehensive ticket pricing algorithm. Our prices are accurate, reliable, and worthwhile with what we connect people with. </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
