--- a/templates/Customers.html
+++ b/templates/Customers.html
@@ -51,7 +51,7 @@
           </ul>
           <form class="form-inline mt-2 mt-md-0">
 
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" > <a href="/signin"> Sign In </a></button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" > <a href="/signin"> Sign Out </a></button>
           </form>
         </div>
       </nav>
@@ -84,8 +84,8 @@
   {% endfor %}
   </tbody>
 </table>
-          <button class="btn btn-primary btn-lg"  onclick="extract_emails()"> Send Emails </button>
-{#        <a href="{{ url_for('pricing', my_var = acc.username) }}">Pricing</a>#}
+          <button class="btn btn-primary btn-lg" > <a href="/">Send Emails</a> </button>
+
         </form>
         </div>
         </div>
